simplify * add integration tests